--- a/TasteFoodIt/TasteFoodIt.csproj
+++ b/TasteFoodIt/TasteFoodIt.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Entities\About.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Chef.cs" />
+    <Compile Include="Entities\OpenDayHour.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\Testimonial.cs" />
