--- a/TasteFoodIt/TasteFoodIt.csproj
+++ b/TasteFoodIt/TasteFoodIt.csproj
@@ -407,6 +407,9 @@
     <Content Include="Views\Default\PartialScript.cshtml" />
     <Content Include="Views\Default\PartialNavbarInfo.cshtml" />
     <Content Include="Views\Default\PartialNavbar.cshtml" />
+    <Content Include="Views\Default\PartialSlider.cshtml" />
+    <Content Include="Views\Default\PartialAbout.cshtml" />
+    <Content Include="Views\Default\PartialMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
