--- a/TasteFoodIt/TasteFoodIt.csproj
+++ b/TasteFoodIt/TasteFoodIt.csproj
@@ -4764,6 +4764,7 @@
     <Content Include="Views\AdminLayout\PartialFooter.cshtml" />
     <Content Include="Views\AdminLayout\PartialScript.cshtml" />
     <Content Include="Views\Category\CreateCategory.cshtml" />
+    <Content Include="Views\Category\UpdateCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
