--- a/TasteFoodIt/TasteFoodIt.csproj
+++ b/TasteFoodIt/TasteFoodIt.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\ErrorPageController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Entities\About.cs" />
     <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\Admin.cs" />
@@ -149,6 +150,10 @@
     <Compile Include="Migrations\202402271901211_mig1.cs" />
     <Compile Include="Migrations\202402271901211_mig1.designer.cs">
       <DependentUpon>202402271901211_mig1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202402291727491_mig2.cs" />
+    <Compile Include="Migrations\202402291727491_mig2.designer.cs">
+      <DependentUpon>202402291727491_mig2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -4775,6 +4780,8 @@
     <Content Include="Views\Category\CreateCategory.cshtml" />
     <Content Include="Views\Category\UpdateCategory.cshtml" />
     <Content Include="Views\ErrorPage\Page404.cshtml" />
+    <Content Include="Views\Product\ProductList.cshtml" />
+    <Content Include="Views\Product\CreateProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -4799,6 +4806,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202402271901211_mig1.resx">
       <DependentUpon>202402271901211_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402291727491_mig2.resx">
+      <DependentUpon>202402291727491_mig2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
